--- a/i3/config
+++ b/i3/config
@@ -105,7 +105,7 @@ for_window [class="Spotify"] floating enable, resize set 800 800
 for_window [class="Thunar"] floating enable, resize set 600 1000
 
 # Wallpaper
-exec --no-startup-id feh --bg-scale ~/Wallpapers/Triantafyllia\ \(1\).png
+exec --no-startup-id feh --bg-scale ~/.wallpapers/mafuyu19_upsc+cs.png
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -247,10 +247,83 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id polybar &
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-#        status_command i3status
-#}
+##################
+# floating rules #
+##################
+
+# set floating (nontiling) for apps needing it
+for_window [class="Yad" instance="yad"] floating enable
+for_window [class="Galculator" instance="galculator"] floating enable
+for_window [class="Blueberry.py" instance="blueberry.py"] floating enable
+
+# set floating (nontiling) for special apps
+for_window [class="Xsane" instance="xsane"] floating enable
+for_window [class="Pavucontrol" instance="pavucontrol"] floating enable
+for_window [class="qt5ct" instance="qt5ct"] floating enable
+for_window [class="Blueberry.py" instance="blueberry.py"] floating enable
+for_window [class="Bluetooth-sendto" instance="bluetooth-sendto"] floating enable
+for_window [class="Pamac-manager"] floating enable
+for_window [window_role="About"] floating enable
+
+######################################
+# color settings for bar and windows #
+######################################
+
+## Define colors variables:
+#set $urgentred      #e53935
+#set $white	    #bfc4e0
+#set $black          #000000
+#set $darkgrey       #383c4a
+#set $grey           #b0b5bd
+#set $mediumgrey	    #8b8b8b
+#set $yellowbrown    #e1b700
+#set $blacktrans     #000000b2
+#set $lavender       #9192bb
+#set $darklavender   #3d3973
+#
+## define colors for windows:
+##class		        	border		bground		text		indicator	child_border
+#client.focused		    	$lavender	$lavender	$black		$mediumgrey	$mediumgrey
+#client.unfocused	    	$darklavender	$darklavender	$grey		$darkgrey	$darkgrey
+#client.focused_inactive		$darklavender	$darklavender	$grey		$black		$black
+#client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
+
+############################################
+# bar settings (input comes from i3blocks) #
+############################################
+
+# Start i3bar to display a workspace bar
+# (plus the system information i3status finds out, if available)
+# bar {
+# 		font pango: Avant Garde Regular 12
+# 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
+# 	    	position top
+# 	    	i3bar_command i3bar --transparency
+#                 separator_symbol "|"
+#                 workspace_min_width 36
+# # it could be that you have no primary display set: set one (xrandr --output <output> --primary)
+# # reference: https://i3wm.org/docs/userguide.html#_tray_output
+# 		    #tray_output primary
+# 		    tray_padding 0
+# 
+# # When strip_workspace_numbers is set to yes,
+# # any workspace that has a name of the form
+# # “[n][:][NAME]” will display only the name.
+# strip_workspace_numbers no
+# ##strip_workspace_name no
+# 
+# 		    colors {
+# 		    separator          $white
+# 		    background         $blacktrans
+# 		    statusline         $white
+# #                          		border 		        bg		txt		indicator
+# 		focused_workspace	$lavender       	$lavender  	$black   	$blacktrans
+# 		active_workspace	$blacktrans             $blacktrans     $white  	$blacktrans
+# 		inactive_workspace	$blacktrans    		$blacktrans     $white		$blacktrans
+# 		urgent_workspace	$urgentred	    	$urgentred	$white		$blacktrans
+# 	}
+# }
