--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -23,12 +23,14 @@ blur-strength = 4;            # Slightly stronger blur for glassy effect
 
 # Exclude certain windows from blur
 blur-background-exclude = [
-  "class_g = 'i3lock'"
+  "class_g = 'i3lock'",
+  "class_g = 'zen'"
 ];
 
 # Force full opacity for certain windows
 opacity-rule = [
-  "100:class_g = 'i3lock'"
+  "100:class_g = 'i3lock'",
+  "100:class_g = 'zen'"
 ];
 
 pseudo-transparency = true;
