--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -38,8 +38,8 @@
 background = #e6282A2E
 background-alt = #cc373B41
 foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
+primary = #9192bb
+secondary = #3d3973
 alert = #A54242
 disabled = #707880
 
@@ -81,7 +81,7 @@ font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
 
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio battery xkeyboard memory cpu wlan date systray
 
 
 cursor-click = pointer
@@ -306,6 +306,37 @@ label-foreground = ${colors.primary}
 screenchange-reload = true
 
 pseudo-transparency = true
+
+
+[module/battery]
+type = internal/battery
+
+; Adjust to your system
+battery = BAT0
+adapter = AC
+
+full-at = 98
+
+format-charging = <animation-charging> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
+format-full = <label-full>
+
+label-charging = Charging %percentage%%
+label-discharging = %percentage%%
+label-full = Fully charged
+
+ramp-capacity-0 = [    ]
+ramp-capacity-1 = [=   ]
+ramp-capacity-2 = [==  ]
+ramp-capacity-3 = [=== ]
+ramp-capacity-4 = [====]
+
+animation-charging-0 = [    ]
+animation-charging-1 = [=   ]
+animation-charging-2 = [==  ]
+animation-charging-3 = [=== ]
+animation-charging-4 = [====]
+animation-charging-framerate = 750
 
 
 ; vim:ft=dosini
